# ai-browser-security-test-suite

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: README.md  artifact-backed-browser-cases.md  authorized-black-box-testing.md  ci-gates.md  ci-github-actions.md  coverage-audit.md  evidence-schema-contracts.md  guided-lab-execution-plan.md  guided-lab-mode.md  guided-lab-template.md  lab-track-coverage-matrix.md  ollama-webui-local-target.md  ollama-webui-project-agent-testing-review.md  ollama-webui-service-preflight.md  ollama-webui-upload-analysis-testing-review.md  playable-browser-safe-ai-examples.md  quickstart.md  real-world-browser-ai-attack-scenarios.md  supported-target-policy.md  target-contract-ingestion.md  tooling-map-to-series.md
examples/: scope.example.yaml
payloads/: README.md  guided_lab_scenarios.yaml  ollama_webui_dom_render_cases.yaml  ollama_webui_file_upload_cases.yaml  ollama_webui_iframe_frame_tree_cases.yaml  ollama_webui_project_agent_cases.yaml  ollama_webui_redirect_chain_cases.yaml  ollama_webui_safe_prompts.yaml  ollama_webui_storage_state_boundary_cases.yaml  safe_browser_ai_cases.yaml  workshop_proxy_evidence_cases.yaml
reports/: README.md
scripts/: README.md  run_local_mvp.sh  run_supported_local_target_suite.sh  test_artifact_backed_cases_against_ollama_webui.sh  test_series_coverage_against_ollama_webui.sh  test_upload_analysis_against_ollama_webui.sh  validate_existing_venv_ollama_webui.sh
tests/: README.md  slice_2_34_lab_11_metadata.json  slice_2_35_lab_12_original_anchors.json  test_blackbox_recon_unit.py  test_blog_series_examples.py  test_browser_capture_scope.py  test_browser_safe_ai_coverage_entrypoint.py  test_browser_safe_ai_method_replay_examples.py  test_ci_contracts.py  test_cli.py  test_config.py  test_coverage_audit.py  test_dom_render.py  test_evidence_report.py  test_evidence_schema.py  test_final_student_platform_readiness_and_courseware_audit.py  test_final_teaching_readiness_courseware_polish.py  test_guided_lab.py  test_iframe_frame_tree.py  test_local_lab.py  test_ollama_project_agent.py  test_ollama_uploads.py  test_ollama_webui_target_runner_unit.py  test_playground_examples.py  test_readme_documentation_navigation.py  test_redirect_chain.py  test_slice_2_17_lab02_dynamic_import_py313.py  test_slice_2_17_lab05_final_artifact_order.py  test_slice_2_17_lab06_metadata_url_policy.py  test_slice_2_19_lab00_method_poc_reporting_readiness.py  test_slice_2_23_post_lab00_readiness_audit.py  (+61 more)
(+362 files in other folders)
