[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-browser-security-test-suite"
version = "0.1.0"
description = "Blue-team validation and authorized black-box testing suite for browser-based AI ecosystems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
dependencies = ["dnspython>=2.6.0", "httpx>=0.27.0", "playwright>=1.44.0", "pyyaml>=6.0.1", "rich>=13.7.0"]

[project.scripts]
ai-browser-suite = "ai_browser_security_suite.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
