[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-browser-security-test-suite"
version = "0.1.0"
description = "Blue-team validation and authorized black-box testing suite for browser-based AI ecosystems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "unattributed" }]
keywords = ["ai-security", "browser-security", "prompt-injection", "playwright", "ollama"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Software Development :: Testing",
]
dependencies = ["dnspython>=2.6.0", "httpx>=0.27.0", "playwright>=1.44.0", "pyyaml>=6.0.1", "rich>=13.7.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[project.scripts]
ai-browser-suite = "ai_browser_security_suite.cli:main"

[project.urls]
Homepage = "https://github.com/unattributed/ai-browser-security-test-suite"
Repository = "https://github.com/unattributed/ai-browser-security-test-suite"
Documentation = "https://github.com/unattributed/ai-browser-security-test-suite/tree/main/docs"
Issues = "https://github.com/unattributed/ai-browser-security-test-suite/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/ai-browser-security-test-suite/payloads" = ["payloads/*.yaml"]
"share/ai-browser-security-test-suite/examples" = ["examples/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
